<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow"
        android:orientation="horizontal"
        android:paddingBottom="16dp"
        android:paddingTop="20dp">

        <ImageView
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginLeft="13dp"
            android:scaleType="fitXY"
            android:src="@drawable/icon_advice_input" />

        <com.jaython.cc.ui.widget.ColorEditText
            android:id="@+id/advice_edit"
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:layout_marginLeft="15.5dp"
            android:layout_marginRight="16.5dp"
            android:background="@drawable/shape_rect_edit_text"
            android:gravity="left|top"
            android:hint="@string/advice_edit_hint"
            android:padding="6dp"
            android:textColorHint="#b3b3b3"
            android:textSize="14sp"
            app:cursor="#ff999999" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8.5dp"
        android:background="@drawable/shadow"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:text="@string/advice_contact"
            android:textColor="#666666"
            android:textSize="16sp" />

        <com.jaython.cc.ui.widget.ColorEditText
            android:id="@+id/advice_contact_edit"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="16.5dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/shape_rect_edit_text"
            android:gravity="left|center_vertical"
            android:hint="@string/advice_contact_hint"
            android:paddingBottom="9dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:paddingTop="9dp"
            android:textColorHint="#b3b3b3"
            android:textSize="14sp"
            app:cursor="#ff999999" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="14.5dp"
        android:text="@string/advice_welcome"
        android:textColor="#666666"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="14.5dp"
        android:text="@string/advice_tip"
        android:textColor="#b3b3b3"
        android:textSize="13.5sp" />

    <Button
        android:id="@+id/advice_commit_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="14.5dp"
        android:background="@drawable/selector_dynamic_send"
        android:gravity="center"
        android:text="@string/advice_commit"
        android:textColor="@android:color/white"
        android:textSize="16sp" />
</LinearLayout>